--- a/pages/signup.html
+++ b/pages/signup.html
@@ -9,14 +9,14 @@
 
 </head>
 <body class="container" style="margin-top: 50px;">
-    <form class="row g-3">
+    <div class="row g-3">
         <div class="col-md-6">
           <label for="inputEmail4" class="form-label">Email</label>
-          <input type="email" class="form-control" id="inputEmail4">
+          <input type="email" class="form-control" id="inputEmail">
         </div>
         <div class="col-md-6">
           <label for="inputPassword4" class="form-label">Password</label>
-          <input type="password" class="form-control" id="inputPassword4">
+          <input type="password" class="form-control" id="inputPassword">
         </div>
         <div class="col-12">
           <label for="inputAddress" class="form-label">Address</label>
@@ -50,8 +50,12 @@
           </div>
         </div>
         <div class="col-12">
-          <button type="submit" class="btn btn-primary">Sign Up</button>
+          <button type="submit" onclick="signup()" class="btn btn-primary">Sign Up</button>
         </div>
-      </form>
+    </div>
+    <!-- Include Firebase SDKs from CDN -->
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script>
+    <script type="text/javascript" src="../js/firebase.js"></script>
 </body>
 </html>
