--- a/pages/signin.html
+++ b/pages/signin.html
@@ -25,9 +25,11 @@
         <button type="submit" class="btn btn-primary" onclick="signIn();">Sign in</button>
         <br/>
         <br/>
+        <button class="btn btn-primary" onclick="signInWithGoogle();">Sign in with Google</button>
         <p>New User? <a href="./signup.html">SignUp</a></p>
       </div>
-      
-      <script src="../js/app.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script>
+      <script type="text/javascript" src="../js/firebase.js"></script>
 </body>
 </html>
