--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
     <link href="./style.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -34,7 +33,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a id="signin" class="nav-link" href="./pages/signin.html" onclick="logout();">SignIn</a>
+                <a id="signin" class="nav-link" href="./pages/signin.html" onclick="signOut();">SignIn</a>
               </li>
             </ul>
           </div>
@@ -81,7 +80,8 @@
 
       <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
       <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js"></script>
-      <script src="./js/app.js"></script>
-      <script src="./js/protected.js"></script>
+      <script type="text/javascript" src="./js/firebase.js"></script>
+      <script type="text/javascript" src="./js/app.js"></script>
+      <script type="text/javascript" src="./js/protected.js"></script>
 </body>
 </html>
