--- a/public/index.html
+++ b/public/index.html
@@ -78,10 +78,12 @@
         </button>
       </div>
 
-      <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-database.js"></script>
+
       <script type="text/javascript" src="./js/firebase.js"></script>
-      <script type="text/javascript" src="./js/app.js"></script>
+      <!-- <script type="text/javascript" src="./js/app.js"></script> -->
       <script type="text/javascript" src="./js/protected.js"></script>
 </body>
 </html>
