--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -10,6 +10,10 @@
 </head>
 <body class="container" style="margin-top: 50px;">
     <div class="row g-3">
+      <div class="col-md-6">
+        <label for="inputName4" class="form-label">Name</label>
+        <input type="text" class="form-control" id="inputName">
+      </div>
         <div class="col-md-6">
           <label for="inputEmail4" class="form-label">Email</label>
           <input type="email" class="form-control" id="inputEmail">
@@ -21,21 +25,6 @@
         <div class="col-12">
           <label for="inputAddress" class="form-label">Address</label>
           <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-        </div>
-        <div class="col-12">
-          <label for="inputAddress2" class="form-label">Address 2</label>
-          <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-        </div>
-        <div class="col-md-6">
-          <label for="inputCity" class="form-label">City</label>
-          <input type="text" class="form-control" id="inputCity">
-        </div>
-        <div class="col-md-4">
-          <label for="inputState" class="form-label">State</label>
-          <select id="inputState" class="form-select">
-            <option selected>Choose...</option>
-            <option>...</option>
-          </select>
         </div>
         <div class="col-md-2">
           <label for="inputZip" class="form-label">Zip</label>
@@ -50,12 +39,14 @@
           </div>
         </div>
         <div class="col-12">
-          <button type="submit" onclick="signup()" class="btn btn-primary">Sign Up</button>
+          <button onclick="signup()" class="btn btn-primary">Sign Up</button>
         </div>
     </div>
     <!-- Include Firebase SDKs from CDN -->
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-database.js"></script>
+
     <script type="text/javascript" src="../js/firebase.js"></script>
 </body>
 </html>
